Correction bug image fallout 4

--- a/css/style.css
+++ b/css/style.css
@@ -844,7 +844,7 @@ body::before
 
 .photoJeu:nth-child(5) span
 {
-  background:url(../img/Fallout4.jpg);
+  background:url(../img/fallout4.jpg);
   background-position: top left;
   background-size: cover;
 }
