--- a/css/style.css
+++ b/css/style.css
@@ -1048,7 +1048,7 @@ footer p a{
 
 /*_______Partie Responsive_________ */
 
-@media screen and (max-width: 1760px)
+@media only screen and (max-width: 1760px)
 {
   #Chrono .photoDate{
     height: calc(500px*0.9);
@@ -1066,7 +1066,7 @@ footer p a{
   }
 }
 
-@media screen and (max-width: 1560px)
+@media only screen and (max-width: 1560px)
 {
   #Chrono img{
     margin-top: 15%;
@@ -1108,7 +1108,7 @@ footer p a{
   
 }
 
-@media screen and (max-width: 1360px)
+@media only screen and (max-width: 1360px)
 {
   .logoStart{
     top: 32.5%;
@@ -1181,7 +1181,7 @@ footer p a{
 
 }
 
-@media screen and (max-width: 1160px){
+@media only screen and (max-width: 1160px){
   .PresT h1{
     font-size: 35px;
     width: 70vw;
@@ -1247,14 +1247,14 @@ footer p a{
   }
 }
 
-@media (min-width: 726px) and (max-width: 1024px) and (orientation: landscape){
+@media only screen and (min-width: 726px) and (max-width: 1024px) and (orientation: landscape){
 
   .startScreen #textStartScreen{
     font-size: 24px;
   }
 
   .buttonStart{
-    top :45%;
+    top :40%;
   }
 
   .buttonStart a{
@@ -1315,7 +1315,7 @@ footer p a{
   }
 }
 
-@media (min-width: 726px) and (max-width: 1024px) and (orientation: portrait){
+@media only screen and (min-width: 726px) and (max-width: 1024px) and (orientation: portrait){
 
   .startScreen #textStartScreen{
     font-size: 24px;
@@ -1392,7 +1392,7 @@ footer p a{
 }
 
 
-@media (max-width: 726px) and (orientation: portrait){
+@media only screen and (max-width: 726px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait){
   #changeScreen{
     display: none;
   }
@@ -1563,7 +1563,7 @@ footer p a{
 
 }
 
-@media (max-width: 900px) and (orientation: landscape){
+@media only screen and (max-width: 900px) and (orientation: landscape){
   #changeScreen{
     display: inline;
   }
@@ -1572,7 +1572,7 @@ footer p a{
 
 
 
-@media (max-width: 400px) and (min-height:670px) and (orientation: portrait){
+@media only screen and (max-width: 400px) and (min-height:670px) and (orientation: portrait){
 
   #Chrono img{
     margin-top: 45%;
@@ -1611,7 +1611,7 @@ footer p a{
 
 }
 
-@media (max-width: 400px) and (max-height:670px) and (orientation: portrait){
+@media only screen and (max-width: 400px) and (max-height:670px) and (orientation: portrait){
 
   .PresT p{
     font-size: 22px;
