--- a/css/style.css
+++ b/css/style.css
@@ -71,7 +71,7 @@ body::before
   }
   
 .section {
-    height: 100vh;
+    height: 100%;
     position: relative;
   }
 
@@ -133,8 +133,8 @@ body::before
   display: none;
   position: fixed;
   z-index: 6;
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
   background-color: rgb(31, 27, 24);
   filter: sepia(0.3) brightness(0.8);
 }
@@ -159,8 +159,8 @@ body::before
 .startScreen{
   position: fixed;
   z-index: 5;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   background-color:rgb(31, 27, 24);
   opacity: 1;
   transition: all 0.5s;
@@ -1011,7 +1011,7 @@ footer{
   left: 0;
   flex-direction: row;
   justify-content: space-around;
-  width: 100vw;
+  width: 100%;
 
 }
 
@@ -1440,7 +1440,7 @@ footer p a{
 
   .PresT h1 {
     font-size: 28px;
-    width: 100vw;
+    width: 100%;
   }
 
   .PresT p {
@@ -1450,7 +1450,7 @@ footer p a{
   }
 
   #Chrono img {
-    margin-top: 35%;
+    margin-top: 40%;
     width: 200px;
     margin-bottom: 10px;
   }
@@ -1526,7 +1526,7 @@ footer p a{
   }
 
   #Commu h2{
-    margin-top: 35%;
+    margin-top: 40%;
     font-size: 28px;
   }
 
@@ -1575,7 +1575,7 @@ footer p a{
 @media only screen and (max-width: 400px) and (min-height:670px) and (orientation: portrait){
 
   #Chrono img{
-    margin-top: 35%;
+    margin-top: 40%;
   }
 
 
