--- a/css/style.css
+++ b/css/style.css
@@ -98,34 +98,34 @@ body::before
     transform: translate(0,0);
   }
   10%{
-    transform: translate(-3rem,5rem);
+    transform: translate(-3rem,2rem);
   }
   20%{
-    transform: translate(2rem,5rem);
+    transform: translate(-2rem,3rem);
   }
   30%{
-    transform: translate(-6rem,3rem);
+    transform: translate(-2rem,3rem);
   }
   40%{
-    transform: translate(3rem,-5rem);
+    transform: translate(-3rem,-1rem);
   }
   50%{
-    transform: translate(-2rem,-4rem);
+    transform: translate(-2rem,2rem);
   }
   60%{
-    transform: translate(8rem,-2rem);
+    transform: translate(-3rem,-2rem);
   }
   70%{
-    transform: translate(-1rem,6rem);
+    transform: translate(-1rem,2rem);
   }
   80%{
-    transform: translate(2rem,3rem);
+    transform: translate(-2rem,3rem);
   }
   90%{
-    transform: translate(6rem,-3rem);
+    transform: translate(-1rem,-3rem);
   }
   100%{
-    transform: translate(-4rem,2rem);
+    transform: translate(-2rem,2rem);
   }
 }
 
@@ -1613,12 +1613,16 @@ footer p a{
 
 @media only screen and (max-width: 400px) and (max-height:670px) and (orientation: portrait){
 
+  .PresT{
+    width: 100%;
+  }
+
   .PresT p{
     font-size: 22px;
   }
 
   #Chrono img{
-    margin-top: 40%;
+    margin-top: 35%;
   }
 
   #Chrono .Texte p{
