--- a/css/style.css
+++ b/css/style.css
@@ -1108,6 +1108,47 @@ footer p a{
   
 }
 
+
+@media only screen and (max-width : 1540px) and (max-height:740px){
+  #Chrono img{
+    margin-top: 12%;
+  }
+
+  #Chrono .Texte p{
+    font-size: 24px;
+  }
+
+  #Jeux h2 {
+    margin-top: 12%;
+  }
+
+  .ListJeux {
+    height: 60%;
+  }
+
+  .ListJeux .photoJeu {
+    height: calc(500px* 0.4);
+    width: calc(400px * 0.4);
+  }
+
+  #Commu h2 {
+    margin-top: 12%;
+  }
+
+  .bloc img {
+    width: 200px;
+  }
+
+  h3{
+    font-size: 30px;
+  }
+
+  .ContentBloc p{
+    font-size: 24px;
+  }
+}
+
+
 @media only screen and (max-width: 1440px){
   #Chrono img{
     margin-top: 12.5%;
@@ -1229,7 +1270,21 @@ footer p a{
   #Commu h2 {
     margin-top: 15%;
 }
+}
 
+@media only screen and (max-width:1280px) and (max-height:820px){
+  #dateActuelle{
+    margin: 0px auto;
+  }
+
+  #Chrono .Texte p {
+  margin-top:75px;
+  }
+
+  #Chrono .photoDate {
+    height: calc(499px*0.8);
+    width: calc(400px*0.8);
+  }
 }
 
 @media only screen and (max-width: 1160px){
@@ -1504,7 +1559,7 @@ footer p a{
   #Chrono img {
     margin-top: 35%;
     width: 200px;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
   }
 
   #dateActuelle{
@@ -1536,7 +1591,7 @@ footer p a{
   }
 
   #Chrono .Texte p{
-    margin-top: 50px;
+    margin-top: 35px;
     font-size: 18px;
     text-align: center;
   }
