--- a/css/style.css
+++ b/css/style.css
@@ -1078,8 +1078,8 @@ footer p a{
   }
   
   #Chrono .photoDate{
-    height: calc(500px*0.75);
-    width: calc(400px*0.75);
+    height: calc(500px*0.9);
+    width: calc(400px*0.9);
   }
 
   #Jeux h2{
@@ -1116,6 +1116,11 @@ footer p a{
 
   #Chrono .Texte p{
     font-size: 24px;
+  }
+
+  #Chrono .photoDate{
+    height: calc(500px*0.8);
+    width: calc(400px*0.8);
   }
 
   #Jeux h2 {
